--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 <head></head>
 <body>       
-  <h1>Esta es mi página index.html
-	</h1> 
-	<p>Aquí va todo mi contenido de la página inicial que debe cargar mi dominio
-		</p> 
+  <h1>Practica Jorge Andreu LabInfoBas HTML 1
+	</h1>  
 	</body>
 	
 </html>
