--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang= "en">
+<head>
+  <meta charset= "UTF=8">
+  <title>Practica1 HTML Jorge Andreu</title>
+</head>
 <body>       
-  <h1>Practica Jorge Andreu LabInfoBas HTML 1
-	</h1>  
+  <h1>Esta es mi página HTML para la Practica 1 de Informatica Basica
+  </h1> 
+		<h3> Voy a redactar un texto con informacion sobre mi 
+		</h3>
+	<h2>Nombre</h2>
+			<p>Jorge Andreu
+			</p> 
+	<h2>Estudios</h2>
+			<p>Diseño y Desarrollo de Viedeojuegos (UJI)
+			</p> 
+	<h2>Procedencia</h2>
+			<p>Alcañiz (Situado en la provincia de Teruel, Aragon)
+			</p> 
+	
+	
 	</body>
 	
 </html>
