--- a/index.html
+++ b/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<html lang= "en">
+<html lang= "es">
 <head>
   <meta charset= "UTF=8">
   <title>Practica1 HTML Jorge Andreu</title>
 </head>
-<body>       
-  <h1>Esta es mi página HTML para la Practica 1 de Informatica Basica
+<body bgcolor= "green">       
+  <h1 align="center">Esta es mi página HTML para la Practica 1 de Informatica Basica
   </h1> 
-		<h3> Voy a redactar un texto con informacion sobre mi 
+		<h3 align="center"> Voy a redactar un texto con informacion sobre mi 
 		</h3>
-	<h2>Nombre</h2>
-			<p>Jorge Andreu
+	<h2 >Nombre</h2>
+			<p >Jorge Andreu
 			</p> 
-	<h2>Estudios</h2>
-			<p>Diseño y Desarrollo de Viedeojuegos (UJI)
+	<h2 >Estudios</h2>
+			<p>Diseño y Desarrollo de <span style="background: yellow; color: red;">Viedeojuegos</span> (<a href="https://www.uji.es"> UJI </a>)
 			</p> 
-	<h2>Procedencia</h2>
-			<p>Alcañiz (Situado en la provincia de Teruel, Aragon)
-			</p> 
+	<h2 >Procedencia</h2>
+			<p>Alcaniz (Situado en la provincia de Teruel, Aragon)<br>
+			<img src="Alcaniz.jpg.jpg"/>
+			</p>
+			<h3>Tabla de Turismo</h3>
+			<table border>
+				<tr> 
+					<td>Parador de Alcaniz</td><td>Iglesia Plz Espana</td>
+				</tr>
+				</tr>
+					<td>Estanca</td><td>Rio Guadalope</td>
+				</tr>
+			</table>
+	<h2 color="blue">Aficiones</h2>
+			<ul>
+				<li>Deportes 
+					<ul>
+						<li>Futbol</li>
+						<li>Esqui</li>
+						<li>Tennis</li>
+						<li>Ping Pong</li>
+					</ul>
+				</li>
+				<li>Videojuegos
+				</li>
+				<li>Fiesta</li>
+			
+			</ul> 			
 	
 	
 	</body>
