--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset= "UTF=8">
   <title>Practica1 HTML Jorge Andreu</title>
 </head>
-<body bgcolor= "green">       
-  <h1 align="center">Esta es mi página HTML para la Practica 1 de Informatica Basica
-  </h1> 
+<body bgcolor= "green"> 
+     <div h1="rojo">
+  <h1 align="center"><div style="background: white; color: red;">Esta es mi página HTML para la Practica 1 de Informatica Basica
+  </div></h1>
 		<h3 align="center"> Voy a redactar un texto con informacion sobre mi 
 		</h3>
-	<h2 >Nombre</h2>
+	<h2 <div style="background: white; color: red;">>Nombre</div></h2>
 			<p >Jorge Andreu
 			</p> 
-	<h2 >Estudios</h2>
+	<h2 <div style="background: white; color: red;">>Estudios</div></h2>
 			<p>Diseño y Desarrollo de <span style="background: yellow; color: red;">Viedeojuegos</span> (<a href="https://www.uji.es"> UJI </a>)
 			</p> 
-	<h2 >Procedencia</h2>
+	<h2 <div style="background: white; color: red;">>Procedencia</div></h2>
 			<p>Alcaniz (Situado en la provincia de Teruel, Aragon)<br>
 			<img src="Alcaniz.jpg.jpg"/>
 			</p>
@@ -28,7 +29,7 @@
 					<td>Estanca</td><td>Rio Guadalope</td>
 				</tr>
 			</table>
-	<h2 color="blue">Aficiones</h2>
+	<h2 <div style="background: white; color: red;">>Aficiones</div></h2>
 			<ul>
 				<li>Deportes 
 					<ul>
