--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</p> 
 	<h2 <div style="background: white; color: red;">>Procedencia</div></h2>
 			<p>Alcaniz (Situado en la provincia de Teruel, Aragon)<br>
-			<img src="Alcaniz.jpg.jpg"/>
+			<img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Plaza_de_España_en_Alcañiz%2C_Teruel_%28Spain%29.JPG"/>
 			</p>
 			<h3>Tabla de Turismo</h3>
 			<table border>
